tests/samples/expression-invalid-6/error.txt
Unexpected "," on line 2 at index 92.

1|// error: ,
2|        {(na9me_.a().pm["[]"][mop]["mop'op"].mm(4.258,'oplm', 52*mmo).tty + 9  + (mmo[lm])),9}
                                                                                             ^
3|
